Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.12-dev-320-g6e4e5a0
Description
Regression: nLite-1.4.9.3 main app uses a wrong font
0.4.11-RC-35-ga9be77c affected
iirc 0.4.11RC22 did behave still fine (I will double-check soon)
Reproduction steps
-install .NET2.0 from rapps
-reboot ros after .NET setup finishes
-install http://www.nliteos.com/download/nLite-1.4.9.3.setup.exe
-select english language during nLite setup
-start up nLite main application
Expected result
xpsp3_nLite_ok.png
Observed result
0.4.11-RC-35-ga9be77c__nLiteFontRegression.png
You can find when I started nLite 1.4.9.3 main app by searching for
(dll/ntdll/ldr/ldrutils.c:1351) Overlapping DLL: C:\Programme\nLite\nlite.exe
|
within 0.4.11-RC-35-ga9be77c__nLiteFontRegression.log
The log shows many
(win32ss/gdi/ntgdi/font.c:304) FontGetObject font not initialized!
|
Eventually those are related.
Attachments
Issue Links
- relates to
-
CORE-16435 nLite 1.4.9.3 height of the dialog is wrong (use ros with german localization)
-
- Open
-
-
CORE-15785 REGRESSION -Zim Desktop Wiki portable v0.67 does not start
-
- Resolved
-
-
CORE-16200 Regression, IrfanView 4.51 'about dlg' is too small and therefore a picture overlaps other GUI elements
-
- Resolved
-
-
CORE-15558 Regression, Abiword 2.6.8, the font listbox should display a specific font only once, but displays each of them many many times instead
-
- Resolved
-
-
CORE-13365 Font/freetype: Improve GetFontResourceInfoW (EnumFonts test program)
-
- Resolved
-